--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "homepage": "https://davidjung1001.github.io/field-rentals",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
