--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.9.0",
     "firebase": "^11.6.1",
     "firebase-functions": "^6.3.2",
+    "framer-motion": "^12.10.1",
     "nodemailer": "^7.0.2",
     "react": "^19.1.0",
     "react-datepicker": "^8.3.0",
@@ -23,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
+    "react-time-picker": "^7.0.0",
     "stripe": "^18.1.0",
     "swiper": "^11.2.6",
     "web-vitals": "^2.1.4"
